--- a/docs/de-de/modules/auftraege/pages/manually-create-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/manually-create-orders.adoc
@@ -401,9 +401,9 @@ Tabelle individualisieren:
 Wenn du die Tabelle einmal angepasst hast, wird diese Auswahl gespeichert. Die Tabelle bleibt also gleich, auch wenn du diesen Auftrag abgeschlossen hast und weitere Aufträge anlegst. Du kannst das Layout jederzeit ändern. Die zur Verfügung stehenden Spalten findest du in <<table-overview-item-search>>. Dort ist zu jeder Spalte auch die Information hinterlegt, ob es sich um eine Standardspalte handelt. Standardspalten werden angezeigt, wenn die Tabelle nicht individualisiert ist.
 
 [[table-overview-item-search]]
-.Spalten Tabelle Artikelsuche
+.Tabellenspalten Artikel
 [cols="1,3"]
-|====
+|===
 |Einstellung |Erläuterung
 
 |*Bestandsanzeige*
@@ -416,68 +416,76 @@ Diese Spalte ist eine Standardspalte.
 
 |*Artikel-ID*
 |Zeigt die ID des Artikels an. Wenn du auf die Artikel-ID klickst, gelangst du direkt in die Einstellungen des jeweiligen Artikels. +
-Diese Spalte ist keine Standardspalte.
+Diese Spalte ist eine Standardspalte.
 
 |*Varianten-ID*
 |Zeigt die Varianten-ID an. Wenn du auf die Varianten-ID klickst, gelangst du direkt in die Einstellungen der Variante. +
-Diese Spalte ist keine Standardspalte.
+Diese Spalte ist eine Standardspalte.
 
 |*Artikel-ID/Varianten-ID*
-|Diese Spalte zeigt dir die Artikel-ID und die Varianten-ID kombiniert und nicht in zwei separaten Spalten an. Wenn du auf die Artikel-ID oder die Varianten-ID klickst, gelangst du direkt in die Einstellungen des jeweiligen Artikels bzw. der Variante. +
-Diese Spalte ist keine Standardspalte.
+|Zeigt die Artikel-ID und die Varianten-ID kombiniert und nicht in zwei separaten Spalten an. Wenn du auf die Artikel-ID oder die Varianten-ID klickst, gelangst du direkt in die Einstellungen des jeweiligen Artikels bzw. der Variante. +
+Diese Spalte ist eine Standardspalte.
 
 |*Variantennummer*
 |Zeigt die Variantennummer an. Wenn du auf die Variantennummer klickst, gelangst du direkt in die Einstellungen der jeweiligen Variante. +
 Diese Spalte ist eine Standardspalte.
 
 |*Artikelname*
-|Die am Artikel hinterlegte Beschreibung wird angezeigt. +
+|Zeigt die am Artikel hinterlegte Beschreibung an. +
 Diese Spalte ist eine Standardspalte.
 
 |*Attribute*
-|Die am Artikel hinterlegten Attribute werden angezeigt. +
+|Zeigt die am Artikel hinterlegten Attribute an. +
 Diese Spalte ist eine Standardspalte.
 
 |*Variantenname*
-|Der an der Variante hinterlegte Variantenname wird angezeigt. +
+|Zeigt den an der Variante hinterlegten Variantennamen an. +
 Diese Spalte ist eine Standardspalte.
 
 |*Barcode*
-|Barcodes werden angezeigt. +
-Diese Spalte ist keine Standardspalte.
+|Zeigt den Barcode des Artikels an. +
+Diese Spalte ist eine Standardspalte.
+
+| *System-EK*
+|Zeigt den Einkaufspreis des Systems an. +
+Diese Spalte ist eine Standardspalte.
+
+|[#intable-item-search-price-selection]*Preisauswahl*
+|In einer Dropdown-Liste werden dir alle für diesen Auftrag ermittelten Verkaufspreise angezeigt. Du kannst einen der angezeigten Preise wählen, der dann als Grundlage für die weiteren Auftragsberechnungen verwendet wird. Enthält der Preis einen Rabatt, wird dies hinter dem Preisnamen und dem Betrag angezeigt. Die Spalten *Kundenklassenrabatt* und *Kategorierabatt* zeigen den Prozentsatz des angewendeten Rabatts an. +
+Eine manuelle Anpassung des Preises kannst du im xref:auftraege:auftraege-verwalten.adoc#284[Warenkorb] vornehmen. Wählst du einen anderen Verkaufspreis als den ersten ermittelten, muss der Verkaufspreis aktualisiert werden. Klicke dafür auf *Verkaufspreis aktualisieren* (material:refresh[]). Nach der Aktualisierung ist die Warenkorb-Schaltfläche (material:add_shopping_cart[]) wieder verfügbar und die Artikel können hinzugefügt werden. Dies gilt auch für Mengenänderungen. +
+Konnte kein gültiger Verkaufspreis ermittelt werden, wird *Kein gültiger Verkaufspreis* in der Dropdown-Liste angezeigt. Ohne gültigen Verkaufspreis kann der Auftrag nicht abgeschlossen werden. Lege daher den Artikel in den Warenkorb und passe den Preis dort manuell an. +
+Diese Spalte ist eine Standardspalte.
+
+| *Kategorierabatt*
+|Zeigt den für den ausgewählten Verkaufspreis angewendeten Kategorierabatt in Prozent an. +
+Diese Spalte ist eine Standardspalte.
+
+| *Kundenklassenrabatt*
+|Zeigt den für den ausgewählten Verkaufspreis angewendeten Kundenklassenrabatt in Prozent an. +
+Diese Spalte ist eine Standardspalte.
+
+| *Verfügbarkeit*
+|Zeigt die Verfügbarkeit des Artikels an. +
+Diese Spalte ist eine Standardspalte.
+
+| *Netto-WB*
+|Zeigt den Netto-Warenbestand des Artikels an. +
+Diese Spalte ist eine Standardspalte.
+
+| *Lager*
+|Zeigt das Lager des Artikels an. +
+Diese Spalte ist eine Standardspalte.
 
 |*Menge*
 |Gib die Menge ein, in der der Artikel dem Warenkorb hinzugefügt werden soll. Du kannst nur ganze Zahlen eingeben, negative Mengen oder Mengen, die den Nettobestand übersteigen, sind nicht erlaubt. In diesem Fall wird eine Fehlermeldung angezeigt. Wenn die hinzugefügte Menge den Nettobestand auf = oder niedriger setzt, wird der Statusbalken für die Bestandsanzeige auf rot gesetzt. +
 Bei Mengenänderungen ändert sich der Verkaufspreis, daher muss der Verkaufspreis aktualisiert werden. Klicke dafür auf *Verkaufspreis aktualisieren* (material:refresh[]). Nach der Aktualisierung ist die Warenkorb-Schaltfläche (material:add_shopping_cart[]) wieder verfügbar und die Artikel können hinzugefügt werden. +
-Dies ist eine Standardspalte.
-
-|*Verkaufspreis*
-|Der aus der <<#intable-item-search-price-selection, Preisauswahl>> gewählte Verkaufspreis für diesen Artikel wird angezeigt. +
-Dies ist eine Standardspalte.
-
-|[#intable-item-search-price-selection]*Preisauswahl*
-|In einer Dropdown-Liste werden dir alle für diesen Auftrag ermittelten Verkaufspreise angezeigt. Du kannst einen der angezeigten Preise wählen, der dann als Grundlage für die weiteren Auftragsberechnungen verwendet wird. Enthält der Preis einen Rabatt, wird dies hinter dem Preisnamen und dem Betrag angezeigt. Die Spalten *Kundenklassenrabatt* und *Kategorierabatt* zeigen den Prozentsatz des angewendeten Rabatts an. +
-Eine manuelle Anpassung des Preises kannst du im <<#shopping-cart, Warenkorb>> vornehmen. Wählst du einen anderen Verkaufspreis als den ersten ermittelten, muss der Verkaufspreis aktualisiert werden. Klicke dafür auf *Verkaufspreis aktualisieren* (material:refresh[]). Nach der Aktualisierung ist die Warenkorb-Schaltfläche (material:add_shopping_cart[]) wieder verfügbar und die Artikel können hinzugefügt werden. Dies gilt auch für Mengenänderungen. +
-Konnte kein gültiger Verkaufspreis ermittelt werden, wird *Kein gültiger Verkaufspreis* in der Dropdown-Liste angezeigt. Ohne gültigen Verkaufspreis kann der Auftrag nicht abgeschlossen werden. Lege daher den Artikel in den Warenkorb und passe den Preis dort manuell an. +
-Diese Spalte ist eine Standardspalte.
-
-|*Verfügbarkeit*
-|In dieser Spalte wird die Verfügbarkeit der Variante angezeigt. Das dargestellte Symbol hängt davon ab, welches du im Menü *Einrichtung » Artikel » Verfügbarkeit* vergeben hast. Weitere Informationen zu diesen Einstellungen findest du auf der Handbuchseite xref:artikel:verfuegbarkeiten.adoc#[Verfügbarkeiten]. +
-Diese Spalte ist eine Standardspalte.
-
-|*Netto-WB*
-|Der Warenbestand für das ausgewählte Lager wird angezeigt. +
-Diese Spalte ist eine Standardspalte.
-
-|*Lager*
-|Das Lager des Artikels wird angezeigt. +
 Diese Spalte ist eine Standardspalte.
 
 |*Warenkorb-Icon*
 |Durch Klick auf den Warenkorb (material:add_shopping_cart[]) wird der Artikel in der ausgewählten *Menge* dem Warenkorb hinzugefügt. +
 Diese Spalte ist eine Standardspalte.
 
-|====
+|===
 
 [.instruction]
 Artikel hinzufügen:
@@ -512,28 +520,101 @@ Nachdem du alle gewünschten Artikel im Warenkorb abschließend bearbeitet hast,
 [.collapseBox]
 .*Warenkorbtabelle individualisieren*
 --
-Die Warenkorbtabelle lässt sich individuell anpassen. Du kannst wählen, welche Tabellenspalten dir in welcher Reihenfolge angezeigt werden sollen. Standardmäßig werden dir beim Öffnen des Menüs folgende Tabellenspalten angezeigt:
+Die Warenkorbtabelle lässt sich individuell anpassen. Du kannst wählen, welche Tabellenspalten dir in welcher Reihenfolge angezeigt werden sollen.
 
-* Artikel-ID/Varianten-ID
-* Varianten Nr.
-* Artikelname
-* Attribute
-* System-EK
-* Preis
-* Aufpreis gesamt = Die Summe der Aufpreise für Bestelleigenschaften.
-* Gesamtsumme = Der Artikelpreis zuzüglich Aufpreise für Bestelleigenschaften.
-* Rabatt = Beinhaltet den Rabatt, der in den Auftragsdetails im ersten Schritt der Auftragsanlage eingegeben wurde.
-* Lager
-* Menge
-* Aktion
+[[table-shopping-cart]]
+.Tabellenspalten Warenkorb
+[cols="1,3"]
+|===
+|Einstellung |Erläuterung
 
-Die folgenden Tabellenspalten können ebenfalls ausgewählt werden, sind standardmäßig aber nicht sichtbar:
+| *Menge*
+|Zeigt die Menge der Artikel an. Passe die Menge bei Bedarf an. +
+Diese Spalte ist eine Standardspalte.
 
-* Artikel-ID
-* Varianten-ID
-* Preisauswahl
-* Kundenklassenrabatt = Der für den ausgewählten Verkaufspreis angewendete Kundenklassenrabatt in Prozent.
-* Kategorierabatt = Der für den ausgewählten Verkaufspreis angewendete Kategorierabatt in Prozent.
+| *Artikel-ID*
+|Zeigt die Artikel-ID an. Mit Klick auf die ID wird der Artikel geöffnet. +
+Diese Spalte ist eine Standardspalte.
+
+| *Varianten-ID*
+|Zeigt die Varianten-ID der Auftragsposition an. Mit Klick auf die ID wird die Variante geöffnet. +
+Diese Spalte ist eine Standardspalte.
+
+| *Artikel-ID* / *Varianten-ID*
+|Zeigt sowohl die Artikel-ID als auch die Varianten-ID an. +
+Diese Spalte ist keine Standardspalte.
+
+| *Variantennummer*
+|Zeigt die Nummer der Variante an. +
+Diese Spalte ist eine Standardspalte.
+
+| *Artikelname*
+|Zeigt den Namen des Artikels an. Passe den Namen bei Bedarf an (material:edit[]). +
+Diese Spalte ist eine Standardspalte.
+
+| *Attribute*
+|Zeigt die Attribute an. +
+Diese Spalte ist eine Standardspalte.
+
+| *Variantenname*
+|Zeigt den Namen der Variante an. +
+Diese Spalte ist eine Standardspalte.
+
+| *Barcode*
+|Zeigt den Barcode des Artikels an. +
+Diese Spalte ist keine Standardspalte.
+
+| *System-EK*
+|Zeigt den Einkaufspreis des Systems an. +
+Diese Spalte ist keine Standardspalte.
+
+| *Preisauswahl*
+|Zeigt die Preisauswahl an. Wähle bei Bedarf eine andere Preisauswahl aus der Dropdown-Liste. +
+Diese Spalte ist eine Standardspalte.
+
+| *Kategorierabatt*
+|Zeigt den für den ausgewählten Verkaufspreis angewendeten Kategorierabatt in Prozent an. +
+Diese Spalte ist keine Standardspalte.
+
+| *Kundenklassenrabatt*
+|Zeigt den für den ausgewählten Verkaufspreis angewendeten Kundenklassenrabatt in Prozent an. +
+Diese Spalte ist keine Standardspalte.
+
+| *Nettopreis*
+|Zeigt den Nettopreis des Artikels an. +
+Über material:edit[] kannst du das Datenfeld Nettopreis bearbeiten. Der Bruttopreis wird automatisch angepasst. +
+Diese Spalte ist eine Standardspalte.
+
+| *Regulärer Nettopreis*
+|Zeigt den regulären Nettopreis des Artikels an. +
+Diese Spalte ist keine Standardspalte.
+
+| *Bruttopreis*
+|Zeigt den Bruttopreis des Aritkels an. Über material:edit[] kannst du das Datenfeld Bruttopreis bearbeiten. Der Nettopreis wird automatisch angepasst. +
+Diese Spalte ist eine Standardspalte.
+
+| *Aufpreis gesamt*
+|Zeigt die Summe der Aufpreise für Bestelleigenschaften an. +
+Diese Spalte ist keine Standardspalte.
+
+| *Rabatt*
+|Zeigt den Rabatt an, der in den Auftragsdetails im ersten Schritt der Auftragsanlage eingegeben wurde. +
+Diese Spalte ist eine Standardspalte.
+
+| *Gesamtbetrag (brutto)*
+|Zeigt den Brutto-Gesamtbetrag des Artikels an. +
+Diese Spalte ist eine Standardspalte.
+
+| *Lager*
+|Zeigt das Lager des Artikels an. Wähle bei Bedarf ein anderes Lager aus der Dropdown-Liste. +
+Diese Spalte ist eine Standardspalte.
+
+|*USt. (%)*
+|Die Umsatzsteuer wird in % angezeigt. +
+Voreingestellt sind 19.00 %. Über die Dropdown-Liste kannst du den Steuersatz ändern. +
+Diese Spalte ist eine Standardspalte.
+
+|===
 
 Passe die Tabelle deinen Bedürfnissen und deinem Arbeitsablauf an. Wenn du die Tabelle angepasst hast, wird diese Auswahl gespeichert. Du kannst die Tabelle jederzeit anpassen.
 
