--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -357,7 +357,7 @@
 *** xref:online-store:images-sizes.adoc[Image sizes in plentyShop LTS]
 *** xref:online-store:template-variables-in-ceres.adoc[ElasticSearch result fields]
 ** xref:online-store:setting-up-online-store.adoc[Old: Setting up Callisto online store]
-* External online stores
+* External online shops
 ** xref:external-online-shops:shopify-plugin.adoc[Shopify plugin]
 * xref:markets:markets.adoc[Markets and price search engines]
 ** xref:markets:price-search-engines.adoc[Price search engines]
