--- a/docs/en-gb/modules/markets/pages/conrad.adoc
+++ b/docs/en-gb/modules/markets/pages/conrad.adoc
@@ -6,6 +6,7 @@
 
 :conrad:
 :market: Conrad
+:mirakl:
 :plugin-name: Conrad
 :plugin-link: https://marketplace.plentymarkets.com/conradextension_6948
 :type-of-market: B2B marketplace
