--- a/docs/en-gb/modules/markets/partials/plugin-installation.adoc
+++ b/docs/en-gb/modules/markets/partials/plugin-installation.adoc
@@ -33,9 +33,9 @@ ifdef::main-client[*_Important:_* The plugin set must be linked to the main clie
 ifdef::priority[]
 . In the menu on the left, click on *Set priorities*.
 . Set the priority for *{plugin}* to {priority}. +
-ifdef::mirakl-priority[]
+ifdef::mirakl[]
 *_Note:_* The priority of the *Mirakl Connector* plugin must be lower than the priority of the marketplace plugin. This is to ensure a proper functionality of both plugins.
-endif::mirakl-priority[]
+endif::mirakl[]
 . Save (icon:save[role=green]) the setting. +
 → The plugin set is shown.
 endif::priority[]
