add translation (except working-with-orders)

--- a/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
@@ -1062,7 +1062,7 @@ Nachricht flüstern:
 . Klicke auf *Neue Nachricht* (material:add[]). +
 → Der Messenger wird geöffnet.
 . Wähle einen oder mehrere Empfänger:innen. +
-*_Hinweis:_* Die ID des Auftrags ist bereits als Empfänger vorausgefüllt. Somit wird die E-Mail an die in der Rechnungsadresse gespeicherte E-Mail-Adresse gesendet.
+*_Hinweis:_* Die ID des Kontakts ist bereits als Empfänger vorausgefüllt. Somit wird die E-Mail an die in der Rechnungsadresse gespeicherte E-Mail-Adresse gesendet.
 . Gib bei Bedarf weitere Empfänger:innen ein.
 . Gib einen Betreff ein.
 . Gib den Text ins Textfeld ein. +
@@ -1086,7 +1086,7 @@ Nachricht senden:
 . Klicke auf *Neue Nachricht* (material:add[]). +
 → Der Messenger wird geöffnet.
 . Wähle einen oder mehrere Empfänger:innen. +
-*_Hinweis:_* Die ID des Auftrags ist bereits als Empfänger vorausgefüllt. Somit wird die E-Mail an die in der Rechnungsadresse gespeicherte E-Mail-Adresse gesendet.
+*_Hinweis:_* Die ID des Kontakts ist bereits als Empfänger vorausgefüllt. Somit wird die E-Mail an die in der Rechnungsadresse gespeicherte E-Mail-Adresse gesendet.
 . Gib bei Bedarf weitere Empfänger:innen ein.
 . Gib einen Betreff ein.
 . Gib den Text ins Textfeld ein. +
@@ -1114,7 +1114,7 @@ Minuten für die Nachricht erfassen:
 . Klicke auf *Neue Nachricht* (material:add[]). +
 → Der Messenger wird geöffnet.
 . Wähle einen oder mehrere Empfänger:innen. +
-*_Hinweis:_* Die ID des Auftrags ist bereits als Empfänger vorausgefüllt. Somit wird die E-Mail an die in der Rechnungsadresse gespeicherte E-Mail-Adresse gesendet.
+*_Hinweis:_* Die ID des Kontakts ist bereits als Empfänger vorausgefüllt. Somit wird die E-Mail an die in der Rechnungsadresse gespeicherte E-Mail-Adresse gesendet.
 . Gib bei Bedarf weitere Empfänger:innen ein.
 . Gib einen Betreff ein.
 . Gib den Text ins Textfeld ein. +
