Update payment pages

--- a/docs/de-de/modules/payment/pages/bankdaten-verwalten.adoc
+++ b/docs/de-de/modules/payment/pages/bankdaten-verwalten.adoc
@@ -136,7 +136,7 @@ Die folgenden Angaben in den Unterlagen sind für EBICS Pflicht.
 [IMPORTANT]
 .Bestehende EBICS-Konten
 ====
-Bereits bestehende und verwendete EBICS-Konten dürfen _nicht_ in plentymarkets eingerichtet werden. Ein EBICS-Konto kann mehrere Benutzer haben. Benutzer werden unter EBICS als Teilnehmer bezeichnet. Beantrage also ggf. einen neuen Teilnehmer (auch technische Teilnehmer möglich), den du ausschließlich für plentymarkets verwendest.
+Bereits bestehende und verwendete EBICS-Konten dürfen _nicht_ in plentymarkets eingerichtet werden. Ein EBICS-Konto kann mehrere Benutzer:innen haben. Benutzer:innen werden unter EBICS als Teilnehmer bezeichnet. Beantrage also ggf. einen neuen Teilnehmer (auch technische Teilnehmer möglich), den du ausschließlich für plentymarkets verwendest.
 ====
 
 [#80]
@@ -177,7 +177,7 @@ Die Auszugsbereitstellung kann entweder buchungstagsorientiert oder auszugsorien
 [#100]
 ==== Teilnehmer
 
-Bei der Umstellung deiner Konten auf EBICS erstellst du für deine Konten einen oder mehrere xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#10[Benutzer]. Benutzer werden unter EBICS als Teilnehmer bezeichnet. Du kannst Teilnehmer mit unterschiedlichen Auftragstypen anlegen. Von diesen Teilnehmern muss ein Teilnehmer mittels der von der Bank erhaltenen *Teilnehmer-ID* im plentymarkets System gespeichert werden.
+Bei der Umstellung deiner Konten auf EBICS erstellst du für deine Konten einen oder mehrere xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#10[Benutzer:innen]. Benutzer:innen werden unter EBICS als Teilnehmer bezeichnet. Du kannst Teilnehmer mit unterschiedlichen Auftragstypen anlegen. Von diesen Teilnehmern muss ein Teilnehmer mittels der von der Bank erhaltenen *Teilnehmer-ID* im plentymarkets System gespeichert werden.
 
 plentymarkets benötigt nur einen Teilnehmer, z.B. einen technischen Teilnehmer mit den niedrigsten Berechtigungen, um den EBICS-Zahlungsabruf durchzuführen. Pro EBICS-Konto darf nur ein Teilnehmer eingerichtet werden.
 
@@ -211,10 +211,10 @@ Um EBICS zu nutzen, lege zunächst ein Konto an. Gehe dazu wie im Folgenden besc
 Konto anlegen:
 
 . Öffne das Menü *Einrichtung » Aufträge » Zahlung » Plugins » EBICS*.
-. Klicke auf *Neues Konto erstellen* (icon:plus-square[role="green"]). +
+. Klicke auf *Neues Konto erstellen* (material:add_box[]). +
 → Das Fenster *Neues Konto* wird geöffnet.
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-ebics-account-settings>>.
-. *Speichere* (icon:save[role=green]) die Einstellungen. +
+. *Speichere* (material:save[]) die Einstellungen. +
 → Das Konto wird erstellt.
 
 [[table-ebics-account-settings]]
@@ -279,7 +279,7 @@ Konto bearbeiten:
 . Klicke auf *Bearbeiten*, um das Konto zu öffnen. +
 → Das Fenster *Kontoeinstellungen* wird geöffnet.
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-ebics-settings>>.
-. *Speichere* (icon:save[role=green]) die Einstellungen.
+. *Speichere* (material:save[]) die Einstellungen.
 
 [IMPORTANT]
 .Domainwechsel
@@ -424,7 +424,7 @@ Geschäftsvorfälle verwalten:
 → Das Fenster *Kontoeinstellungen* wird geöffnet.
 . Klicke auf *Geschäftsvorfälle*.
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-ebics-settings-transactions>>.
-. *Speichere* (icon:save[role=green]) die Einstellungen.
+. *Speichere* (material:save[]) die Einstellungen.
 
 [[table-ebics-settings-transactions]]
 .Einstellungen für Geschäftsvorfälle vornehmen
@@ -469,7 +469,7 @@ Inaktive Geschäftsvorfälle laden:
 . Klicke auf *Suchen*. +
 → Alle Zahlungen des eingegebenen Tages, für die keine Geschäftsvorfälle aktiv sind, werden angezeigt.
 . Wähle die Geschäftsvorfälle, die du aktivieren möchtest.
-. *Speichere* (icon:save[role=green]) die Einstellungen. +
+. *Speichere* (material:save[]) die Einstellungen. +
 → Die Geschäftsvorfälle sind aktiviert.
 
 Um die Zahlungen zuzuordnen, muss für dieses Datum ein manueller Zahlungsabruf wie in <<#table-ebics-settings>> beschrieben durchgeführt werden. Alle zukünftigen Zahlungen werden automatisch zugeordnet.
@@ -519,7 +519,7 @@ Dokumentenvorlage einrichten:
 → Das Tab *Vorlage* wird geöffnet.
 . Wähle eine *Sprache* aus der Dropdown-Liste.
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#tabelle-einrichtung-dokumentenvorlage>>.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
+. *Speichere* (material:save[]) die Einstellungen.
 
 [[tabelle-einrichtung-dokumentenvorlage]]
 .Dokumentenvorlage einrichten
@@ -592,7 +592,7 @@ PDF-Vorlage hochladen:
 . Klicke auf *Durchsuchen...*. +
 → Das Fenster *Datei hochladen* wird geöffnet.
 . Öffne die PDF-Datei.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
+. *Speichere* (material:save[]) die Einstellungen.
 
 [#250]
 === E-Mail-Vorlage erstellen
