--- a/docs/de-de/modules/payment/pages/waehrungen.adoc
+++ b/docs/de-de/modules/payment/pages/waehrungen.adoc
@@ -17,7 +17,7 @@ Systemwährung festlegen:
 
 . Öffne das Menü *Einrichtung » Aufträge » Zahlung » Währungen*.
 . Wähle eine Währung unter *Standardwährung*.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
+. *Speichere* (material:save[]) die Einstellungen.
 
 [IMPORTANT]
 .Systemwährung vs. Währung im Webshop
@@ -36,7 +36,7 @@ Währung umrechnen:
 
 . Öffne das Menü *Einrichtung » Aufträge » Zahlung » Währungen*.
 . Nimm die Einstellungen anhand von <<#tabelle-einstellungen-waehrung>> vor.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
+. *Speichere* (material:save[]) die Einstellungen.
 
 [[tabelle-einstellungen-waehrung]]
 .Währungseinstellungen
