--- a/docs/de-de/modules/payment/pages/beta-zahlungen-verwalten-neu.adoc
+++ b/docs/de-de/modules/payment/pages/beta-zahlungen-verwalten-neu.adoc
@@ -17,7 +17,7 @@ Grundeinstellungen ändern:
 
 . Öffne das Menü *Einrichtung » Aufträge » Zahlung » Eingänge*.
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#tabelle-grundeinstellungen-zahlungseingang>>.
-. *Speichere* (icon:save[role="green"]) die Einstellungen.
+. *Speichere* (material:save[]) die Einstellungen.
 
 [[tabelle-grundeinstellungen-zahlungseingang]]
 .Grundeinstellungen für Zahlungseingänge vornehmen
@@ -349,7 +349,7 @@ Benutzer:innen::
 . Suche (material:search[]) und öffne das betreffende Benutzer:innenkonto.
 . Klicke auf *Ansichten*.
 . Erweitere die Listeneinträge (icon:chevron-right[role="darkGrey"]) und wähle die Ansichten (material:check_box[role=skyBlue]), auf die die Benutzer:in Zugriff haben soll.
-. Speichere (terra:save[role="darkGrey"]) die Einstellungen.
+. Speichere (material:save[]) die Einstellungen.
 
 Weitere Informationen zu Benutzer:innenkonten und Zugriffsrechten findest du xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#112[hier].
 
@@ -365,7 +365,7 @@ Rollen::
 . Suche (material:search[]) und öffne die betreffende Benutzer:innenrolle.
 . Klicke auf *Ansichten*.
 . Erweitere die Listeneinträge (icon:chevron-right[role="darkGrey"]) und wähle die Ansichten (material:check_box[role=skyBlue]), auf die die Benutzer:innenrolle Zugriff haben soll.
-. Speichere (terra:save[role="darkGrey"]) die Einstellungen.
+. Speichere (material:save[]) die Einstellungen.
 
 Weitere Informationen zu Benutzer:innenkonten und Zugriffsrechten findest du xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#112[hier].
 
