--- a/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
@@ -182,7 +182,7 @@ Auftrag oder Angebot über Kontakt anlegen:
 . Navigiere zu material:shopping_cart[] *Aufträge* > *Neuer Auftrag* oder *Neues Angebot*. +
 → Du wirst automatisch zu den Auftragsdetails für den neuen Auftrag bzw. das neue Angebot weitergeleitet.
 
-Über den Auftragsdetails kannst du aus der Dropdown-Liste auch nachträglich zwischen Auftrag und Angebot wählen. Zudem kannst du optional eine xref:auftraege:auftraege-verwalten.adoc#295[Auftragsvorlage] aus der Dropdown-Liste wählen, die auf diesen Auftrag angewendet werden soll. In der Standardeinstellung ist hier keine Auftragsvorlage ausgewählt.
+Oberhalb der Auftragsdetails kannst du aus der Dropdown-Liste auch nachträglich zwischen Auftrag und Angebot wählen. Zudem kannst du optional eine xref:auftraege:auftraege-verwalten.adoc#295[Auftragsvorlage] aus der Dropdown-Liste wählen, die auf diesen Auftrag angewendet werden soll. In der Standardeinstellung ist hier keine Auftragsvorlage ausgewählt.
 
 Die im Folgenden beschriebenen Schritte sind für Auftrag und Angebot gleich.
 
@@ -194,7 +194,7 @@ Die Ansichten der Benutzeroberfläche sind so gestaltet, dass sich Aufträge sch
 Da der neue Auftrag oder das neue Angebot über die Kontaktübersicht angelegt wird, werden in den Auftragsdetails bereits einige der im Kontakt hinterlegten Daten übernommen. Welche Informationen übernommen werden, hängt davon ab, welche Daten im Kontakt gespeichert sind. Ansonsten greifen die xref:auftraege:auftraege-verwalten.adoc#250[Standardeinstellungen]. Beachte dazu auch <<table-order-details-new-order>>. Alle Angaben in den Auftragsdetails sind Pflichtfelder.
 
 [[table-order-details-new-order]]
-.Neuer Auftrag: Allgemein
+.Allgemeine Einstellungen
 [cols="1,3"]
 |====
 |Einstellung |Erläuterung
@@ -203,16 +203,16 @@ Da der neue Auftrag oder das neue Angebot über die Kontaktübersicht angelegt w
 |Wähle den Typ des Auftrags aus der Dropdown-Liste.
 
 | *Auftragsvorlage*
-|Wähle die Vorlage des Auftrags aus der Dropdown-Liste.
+|Wähle die Vorlage für den Auftrag aus der Dropdown-Liste.
 
 2+^| *Auftragsdetails*
 
 | *Rechnungsadresse*
-|Die im Datensatz des Kontaktes hinterlegte Rechnungsadresse wird übernommen. Sind mehrere Rechnungsadressen hinterlegt, wird die als primär definierte Rechnungsadresse übernommen. Wenn keine Rechnungsadresse als primäre Adresse definiert ist, kann man aus der Dropdown-Liste die gewünschte Adresse wählen. +
+|Die im Datensatz des Kontakts hinterlegte Rechnungsadresse wird übernommen. Sind mehrere Rechnungsadressen hinterlegt, wird die als primär definierte Rechnungsadresse übernommen. Wenn keine Rechnungsadresse als primäre Adresse definiert ist, kannst du aus der Dropdown-Liste die gewünschte Adresse wählen. +
 Über die Vorschau (material:visibility[]) gelangst du direkt in den Kontaktatensatz. Die bereits gewählten Einstellungen in den Auftragsdetails gehen nicht verloren.
 
 | *Lieferadresse*
-|Wenn du in der Box *Wie Rechnung* ein Häkchen setzt, wird die unter *Rechnungsadresse* eingegebene Adresse auch als Lieferadresse übernommen. Ansonsten wird die im Datensatz des Kontaktes hinterlegte Lieferadresse übernommen. Sind mehrere Lieferadressen hinterlegt, wird die als primär definierte Lieferadresse übernommen. Wenn keine Lieferadresse als primäre Adresse definiert ist, kann man aus der Dropdown-Liste die gewünschte Adresse wählen. +
+|Wenn du in der Box *Wie Rechnung* ein Häkchen setzt, wird die unter *Rechnungsadresse* eingegebene Adresse auch als Lieferadresse übernommen. Ansonsten wird die im Datensatz des Kontakts hinterlegte Lieferadresse übernommen. Sind mehrere Lieferadressen hinterlegt, wird die als primär definierte Lieferadresse übernommen. Wenn keine Lieferadresse als primäre Adresse definiert ist, kannst du aus der Dropdown-Liste die gewünschte Adresse wählen. +
 In der Dropdown-Liste hast du auch die Möglichkeit, eine neue Lieferadresse einzugeben und im Kontaktdatensatz zu speichern. Beachte dazu die Erläuterungen in der ausklappbaren Box am Ende dieses Abschnitts. +
 Über die Vorschau (material:visibility[]) gelangst du direkt in den Kontaktdatensatz. Die bereits gewählten Einstellungen in den Auftragsdetails gehen nicht verloren.
 
@@ -243,7 +243,7 @@ Es ist ein Rabatt voreingetragen, wenn der Kontakt zu einer Kundenklasse gehört
 
 |====
 
-Nachdem du alle Einstellungen vorgenommen hast, gehe zum nächsten Schritt weiter, indem du unten auf *Artikel hinzufügen* klickst. Alternativ kannst du auch oben auf den Schritt “Artikel hinzufügen” klicken. Die Auftragsdetails werden gespeichert und du wirst zum nächsten Arbeitsschritt geleitet. In diesem Schritt fügst du dem Auftrag Artikel hinzu.
+Nachdem du alle Einstellungen vorgenommen hast, gehe zum nächsten Schritt weiter, indem du unten auf *ARTIKEL HINZUFÜGEN* klickst. Alternativ kannst du auch oben auf den 2. Schritt *Artikel hinzufügen* klicken. Die Auftragsdetails werden gespeichert und du wirst zum nächsten Arbeitsschritt geleitet. In diesem Schritt fügst du dem Auftrag Artikel hinzu.
 
 
 [.collapseBox]
@@ -293,7 +293,7 @@ Nach dem Speichern wird die neue Lieferadresse in den entsprechenden Kontaktdate
 *Straße* ist ein Pflichtfeld, wenn unter *Hausnummer* und *Adresszusatz* kein Eintrag gemacht wurde. *Hausnummer* ist ein Pflichtfeld, wenn unter *Straße* und *Adresszusatz* kein Eintrag gemacht wurde.
 
 |*Adresse 3 (Adresszusatz)*
-|Gib optional einen Adresszusatz ein, wie z.B. Apartment 12a. Wenn unter *Straße* und *Hausnummer* kein Eintrag gemacht wurde, ist dies ein Pflichtfeld.
+|Gib optional einen Adresszusatz ein, wie z.B. Appartement 12a. Wenn unter *Straße* und *Hausnummer* kein Eintrag gemacht wurde, ist dies ein Pflichtfeld.
 
 |*Adresse 4 (Frei)*
 |Dies ist ein Feld zur freien Verfügung.
@@ -338,7 +338,6 @@ Artikel suchen:
 
 .. *_Möglichkeit 1:_* Klicke auf material:search[], um direkt eine Liste aller Artikel zu sehen.
 .. *_Möglichkeit 2:_* Gib etwas in das Suchfeld ein und klicke auf einen der automatischen Vorschläge.
-Klicke dann auf material:search[], um die Suche auszuführen.
 .. *_Möglichkeit 3:_* Klicke auf material:tune[], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen. Die folgende Tabelle listet alle verfügbaren Filter.
 
 [[table-order-filters]]
@@ -406,9 +405,10 @@ Diese Sucheinstellungen kannst du speichern, um sie in Zukunft schneller und ein
 . Klicke auf eine bereits erstellte Filtereinstellung. +
 → Die Suche wird ausgeführt und die verwendeten Sucheinstellungen werden oben als Chips dargestellt.
 
+[#configure-item-table]
 ===== Tabelle individualisieren
 
-Die Artikeltabelle kann individuell gestaltet werden. Das bedeutet, dass du selbst entscheiden kannst, welche Informationen dir in den Tabellenspalten angezeigt werden. Gehe dafür folgendermaßen vor:
+Die Artikeltabelle kann individuell gestaltet werden. Das bedeutet, dass du selbst entscheiden kannst, welche Informationen dir in den Tabellenspalten angezeigt werden und in welcher Reihenfolge sie platziert sind. Gehe dafür vor wie folgt.
 
 [.instruction]
 Tabelle individualisieren:
@@ -452,7 +452,7 @@ Diese Spalte ist eine Standardspalte.
 Diese Spalte ist eine Standardspalte.
 
 |*Artikelname*
-|Zeigt die am Artikel hinterlegte Beschreibung an. +
+|Zeigt den am Artikel hinterlegten Namen an. +
 Diese Spalte ist eine Standardspalte.
 
 |*Attribute*
@@ -494,7 +494,7 @@ Diese Spalte ist eine Standardspalte.
 Diese Spalte ist eine Standardspalte.
 
 | *Lager*
-|Zeigt das Lager des Artikels an. +
+|Zeigt das Lager des Artikels an. Wähle bei Bedarf ein anderes Lager aus der Dropdown-Liste. Beachte, dass dies nur möglich ist, wenn du für die *Zuordnung des Lagers* die Einstellung *b) Pro Artikelposition kann ein Lager zugeornet werden* gewählt hast. +
 Diese Spalte ist eine Standardspalte.
 
 |*Menge*
@@ -516,15 +516,15 @@ Artikel hinzufügen:
 . Gib die Menge des Artikels ein, die dem Auftrag hinzugefügt werden soll. +
 → Nimmst du Preis- oder Mengenänderungen vor, gehe rechts in der jeweiligen Zeile in das Kontextmenü (material:more_vert[]) und aktualisiere den Verkaufspreis mit Klick auf *Verkaufspreise aktualisieren* (material:refresh[]). +
 *_Tipp:_* Links oben in der Tabelle kannst du mit Klick auf *Verkaufspreise aktualisieren* (material:refresh[]) alle Preis- und Mengenänderungen auf einmal aktualisieren.
-. Füge die Artikel dem Auftrag hinzu, indem du am Ende der jeweiligen Zeile auf den Warenkorb (material:add_shopping_cart[]) klickst.
+. Klicke am Ende der jeweiligne Zeile auf den Warenkorb (material:add_shopping_cart[]), um den Artikel dem Auftrag hinzuzufügen.
 . Wiederhole diese Schritte, um weitere Artikel hinzuzufügen.
-. Wenn alle Artikel hinzugefügt wurden, gehe zum nächsten Schritt, indem du auf *Zusammenfassung* klickst. +
+. Wenn alle Artikel hinzugefügt wurden, gehe zum nächsten Schritt, indem du auf *ZUSAMMENFASSUNG* klickst. +
 → Der Warenkorb wird gespeichert.
 
 [#shopping cart]
 ==== Warenkorb
 
-In der Tabelle des Warenkorbs kannst du sowohl die *Menge* als auch den *Verkaufspreis* anpassen. Sobald du die Angaben in einem der Felder änderst, müssen Aktualisierungen durchgeführt werden. Dies kannst du tun, indem du am jeweiligen Artikel auf *Verkaufspreis aktualisieren* (material:refresh[]) klickst. Oder du nutzt die Schaltfläche *Verkaufspreise aktualisieren* unterhalb des Warenkorbs. Erst nach der Aktualisierung kannst du in den nächsten Schritt der Auftragsanlage weitergehen.
+In der Tabelle des Warenkorbs kannst du sowohl den *Artikelnamen* als auch die *Menge* und den *Verkaufspreis* anpassen. Sobald du die Angaben der Menge oder des Preises änderst, müssen Aktualisierungen durchgeführt werden. Dies kannst du tun, indem du am jeweiligen Artikel auf *Verkaufspreis aktualisieren* (material:refresh[]) klickst. Oder du nutzt die Schaltfläche *Verkaufspreise aktualisieren* unterhalb des Warenkorbs. Erst nach der Aktualisierung kannst du in den nächsten Schritt der Auftragsanlage weitergehen.
 
 Folgendes gilt für Verkaufspreise:
 
@@ -536,7 +536,7 @@ Folgendes gilt für Verkaufspreise:
 
 Auftragspositionen im Warenkorb können auch gelöscht werden. Klicke dafür auf *Löschen* (material:delete[]). Eine weitere Bearbeitungsmöglichkeit der Auftragspositionen im Warenkorb stellen die Eigenschaften dar. Beachte dafür das Kapitel <<#287, Eigenschaften von Auftragspositionen>>.
 
-Nachdem du alle gewünschten Artikel im Warenkorb abschließend bearbeitet hast, klicke auf *Zusammenfassung*, um zum dritten und letzten Schritt zu gelangen. Du kannst auch zu den Auftragsdetails zurückkehren, indem du auf *Auftragsdetails* klickst. Artikel im Warenkorb werden gespeichert, wenn du vor- oder zurückgehst.
+Nachdem du alle gewünschten Artikel im Warenkorb abschließend bearbeitet hast, klicke auf *ZUSAMMENFASSUNG*, um zum dritten und letzten Schritt zu gelangen. Du kannst auch zu den Auftragsdetails zurückkehren, indem du auf *Auftragsdetails* klickst. Artikel im Warenkorb werden gespeichert, wenn du vor- oder zurückgehst.
 
 [.collapseBox]
 .*Warenkorbtabelle individualisieren*
@@ -548,6 +548,9 @@ Die Warenkorbtabelle lässt sich individuell anpassen. Du kannst wählen, welche
 [cols="1,3"]
 |===
 |Einstellung |Erläuterung
+
+| *Ausklappen*
+|Ermöglicht das Ausklappen der Auftragspositionstabelle und zeigt die Eigenschaften an.
 
 | *Menge*
 |Zeigt die Menge der Artikel an. Passe die Menge bei Bedarf an. +
@@ -562,15 +565,15 @@ Diese Spalte ist eine Standardspalte.
 Diese Spalte ist eine Standardspalte.
 
 | *Artikel-ID* / *Varianten-ID*
-|Zeigt sowohl die Artikel-ID als auch die Varianten-ID an. +
+|Zeigt die Artikel-ID und die Varianten-ID kombiniert und nicht in zwei separaten Spalten an. Wenn du auf die Artikel-ID oder die Varianten-ID klickst, gelangst du direkt in die Einstellungen des jeweiligen Artikels bzw. der Variante. +
 Diese Spalte ist keine Standardspalte.
 
 | *Variantennummer*
-|Zeigt die Nummer der Variante an. +
+|Zeigt die Nummer der Variante an. Wenn du auf die Variantennummer klickst, gelangst du direkt in die Einstellungen der jeweiligen Variante. +
 Diese Spalte ist eine Standardspalte.
 
 | *Artikelname*
-|Zeigt den Namen des Artikels an. Passe den Namen bei Bedarf an (material:edit[]). +
+|Zeigt den am Artikel hinterlegten Namen an. Passe den Namen bei Bedarf an (material:edit[]). +
 Diese Spalte ist eine Standardspalte.
 
 | *Attribute*
@@ -602,8 +605,7 @@ Diese Spalte ist keine Standardspalte.
 Diese Spalte ist keine Standardspalte.
 
 | *Nettopreis*
-|Zeigt den Nettopreis des Artikels an. +
-Über material:edit[] kannst du das Datenfeld Nettopreis bearbeiten. Der Bruttopreis wird automatisch angepasst. +
+|Zeigt den Nettopreis des Artikels an. Über material:edit[] kannst du das Datenfeld Nettopreis bearbeiten. Der Bruttopreis wird automatisch angepasst. +
 Diese Spalte ist eine Standardspalte.
 
 | *Regulärer Nettopreis*
@@ -627,14 +629,15 @@ Diese Spalte ist eine Standardspalte.
 Diese Spalte ist eine Standardspalte.
 
 | *Lager*
-|Zeigt das Lager des Artikels an. Wähle bei Bedarf ein anderes Lager aus der Dropdown-Liste. +
+|Zeigt das Lager des Artikels an. Wähle bei Bedarf ein anderes Lager aus der Dropdown-Liste. Beachte, dass dies nur möglich ist, wenn du für die *Zuordnung des Lagers* die Einstellung *b) Pro Artikelposition kann ein Lager zugeornet werden* gewählt hast. +
 Diese Spalte ist eine Standardspalte.
 
-|*USt. (%)*
-|Die Umsatzsteuer wird in % angezeigt. +
-Voreingestellt sind 19.00 %. Über die Dropdown-Liste kannst du den Steuersatz ändern. +
+| *USt. (%)*
+|Die Umsatzsteuer wird in % angezeigt. Voreingestellt sind 19.00 %. Über die Dropdown-Liste kannst du den Steuersatz ändern. +
 Diese Spalte ist eine Standardspalte.
 
+| *Aktionen*
+|Ist dieses Feld gewählt, sind die Aktionen zum Bearbeiten (material:edit[]) und Löschen (material:delete[]) des Artikels verfügbar.
 |===
 
 Passe die Tabelle deinen Bedürfnissen und deinem Arbeitsablauf an. Wenn du die Tabelle angepasst hast, wird diese Auswahl gespeichert. Du kannst die Tabelle jederzeit anpassen.
