--- a/docs/de-de/modules/auftraege/pages/manually-create-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/manually-create-orders.adoc
@@ -430,7 +430,7 @@ Diese Spalte ist eine Standardspalte.
 Diese Spalte ist eine Standardspalte.
 
 |*Artikelname*
-|Zeigt die am Artikel hinterlegte Beschreibung an. +
+|Zeigt den am Artikel hinterlegten Namen an. +
 Diese Spalte ist eine Standardspalte.
 
 |*Attribute*
@@ -472,7 +472,7 @@ Diese Spalte ist eine Standardspalte.
 Diese Spalte ist eine Standardspalte.
 
 | *Lager*
-|Zeigt das Lager des Artikels an. +
+|Zeigt das Lager des Artikels an. Wähle bei Bedarf ein anderes Lager aus der Dropdown-Liste. Beachte, dass dies nur möglich ist, wenn du für die *Zuordnung des Lagers* die Einstellung *b) Pro Artikelposition kann ein Lager zugeornet werden* gewählt hast. +
 Diese Spalte ist eine Standardspalte.
 
 |*Menge*
