--- a/docs/de-de/modules/auftraege/pages/manually-create-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/manually-create-orders.adoc
@@ -527,6 +527,9 @@ Die Warenkorbtabelle lässt sich individuell anpassen. Du kannst wählen, welche
 |===
 |Einstellung |Erläuterung
 
+| *Ausklappen*
+|Ermöglicht das Ausklappen der Auftragspositionstabelle und zeigt die Eigenschaften an.
+
 | *Menge*
 |Zeigt die Menge der Artikel an. Passe die Menge bei Bedarf an. +
 Diese Spalte ist eine Standardspalte.
@@ -540,15 +543,15 @@ Diese Spalte ist eine Standardspalte.
 Diese Spalte ist eine Standardspalte.
 
 | *Artikel-ID* / *Varianten-ID*
-|Zeigt sowohl die Artikel-ID als auch die Varianten-ID an. +
+|Zeigt die Artikel-ID und die Varianten-ID kombiniert und nicht in zwei separaten Spalten an. Wenn du auf die Artikel-ID oder die Varianten-ID klickst, gelangst du direkt in die Einstellungen des jeweiligen Artikels bzw. der Variante. +
 Diese Spalte ist keine Standardspalte.
 
 | *Variantennummer*
-|Zeigt die Nummer der Variante an. +
+|Zeigt die Nummer der Variante an. Wenn du auf die Variantennummer klickst, gelangst du direkt in die Einstellungen der jeweiligen Variante. +
 Diese Spalte ist eine Standardspalte.
 
 | *Artikelname*
-|Zeigt den Namen des Artikels an. Passe den Namen bei Bedarf an (material:edit[]). +
+|Zeigt den am Artikel hinterlegten Namen an. Passe den Namen bei Bedarf an (material:edit[]). +
 Diese Spalte ist eine Standardspalte.
 
 | *Attribute*
@@ -580,8 +583,7 @@ Diese Spalte ist keine Standardspalte.
 Diese Spalte ist keine Standardspalte.
 
 | *Nettopreis*
-|Zeigt den Nettopreis des Artikels an. +
-Über material:edit[] kannst du das Datenfeld Nettopreis bearbeiten. Der Bruttopreis wird automatisch angepasst. +
+|Zeigt den Nettopreis des Artikels an. Über material:edit[] kannst du das Datenfeld Nettopreis bearbeiten. Der Bruttopreis wird automatisch angepasst. +
 Diese Spalte ist eine Standardspalte.
 
 | *Regulärer Nettopreis*
@@ -605,14 +607,15 @@ Diese Spalte ist eine Standardspalte.
 Diese Spalte ist eine Standardspalte.
 
 | *Lager*
-|Zeigt das Lager des Artikels an. Wähle bei Bedarf ein anderes Lager aus der Dropdown-Liste. +
+|Zeigt das Lager des Artikels an. Wähle bei Bedarf ein anderes Lager aus der Dropdown-Liste. Beachte, dass dies nur möglich ist, wenn du für die *Zuordnung des Lagers* die Einstellung *b) Pro Artikelposition kann ein Lager zugeornet werden* gewählt hast. +
 Diese Spalte ist eine Standardspalte.
 
-|*USt. (%)*
-|Die Umsatzsteuer wird in % angezeigt. +
-Voreingestellt sind 19.00 %. Über die Dropdown-Liste kannst du den Steuersatz ändern. +
+| *USt. (%)*
+|Die Umsatzsteuer wird in % angezeigt. Voreingestellt sind 19.00 %. Über die Dropdown-Liste kannst du den Steuersatz ändern. +
 Diese Spalte ist eine Standardspalte.
 
+| *Aktionen*
+|Ist dieses Feld gewählt, sind die Aktionen zum Bearbeiten (material:edit[]) und Löschen (material:delete[]) des Artikels verfügbar.
 |===
 
 Passe die Tabelle deinen Bedürfnissen und deinem Arbeitsablauf an. Wenn du die Tabelle angepasst hast, wird diese Auswahl gespeichert. Du kannst die Tabelle jederzeit anpassen.
