--- a/docs/en-gb/modules/fulfilment/pages/shipping-centre-2-0.adoc
+++ b/docs/en-gb/modules/fulfilment/pages/shipping-centre-2-0.adoc
@@ -577,7 +577,9 @@ Click on *Update order packages* (material:refresh[]) to update the data in the 
 
 Click on *Configure columns* (material:settings[]) to deactivate the columns that are already shown in the overview.
 
-At the end of the line of the package, click on *Delete package* (material:delete[]) to delete individual packages. A window opens and you need to confirm your decision.  
+You can configure individual packages by clicking on the line of the package. A window opens for you to configure the values for package type, packing unit type, package weight and package volume. Your settings are saved and applied to the package when you click on the button *Configure package* (material:settings[]).
+
+At the end of the line of the package, click on *More* (material:more_vert[]) and then on *Delete package* (material:delete[]) to delete individual packages. A window opens and you need to confirm your decision.  
 
 A detailed description about the shipping packages can be found further down on this page in the <<#edit-shipping-package, Editing a shipping package>> chapter.
 
