ADD info upload docs

--- a/docs/en-gb/modules/automation/pages/procedures.adoc
+++ b/docs/en-gb/modules/automation/pages/procedures.adoc
@@ -1140,7 +1140,8 @@ The following sub-procedures are available for this procedure:
 [#uploaded-docs]
 ==== Uploaded documents
 
-Use the *Uploaded documents* procedure to automatically print or save all uploaded documents for an order via the corresponding sub-procedure. This procedure is suitable for documents that are not related to orders.
+Use the *Uploaded documents* procedure to automatically print or save all uploaded documents for an order via the corresponding sub-procedure. This procedure is suitable for documents that are not related to orders. +
+You can upload your own documents in the *Orders » Orders (Test phase)* menu. To do so, open an order and go to the *Documents* area. At the top, click on *Create document* (material:add[]) and select the option *External document* (material:file_download[]).
 
 [.subhead]
 Work steps
