--- a/docs/de-de/modules/automatisierung/pages/aktionen.adoc
+++ b/docs/de-de/modules/automatisierung/pages/aktionen.adoc
@@ -1141,7 +1141,7 @@ Verfügbare Subaktionen für diese Aktion:
 ==== Hochgeladene Dokumente
 
 Mit der Aktion *Hochgeladene Dokumente* können alle hochgeladenen Dokumente für einen Auftrag per Subaktion automatisch zum Beispiel gedruckt oder gespeichert werden. Diese Aktion eignet sich für nicht auftragsbezogene Dokumente. +
-Eigene Dokumente lädst du im Menü *Aufträge » Aufträge (Testphase)* herunter. Öffne dazu einen Auftrag und gehe in den Bereich *Dokumente*. Klicke oben auf *Dokument erstellen* (material:add[]) und wähle die Option *Externes Dokument* (material:file_download). 
+Eigene Dokumente lädst du im Menü *Aufträge » Aufträge (Testphase)* herunter. Öffne dazu einen Auftrag und gehe in den Bereich *Dokumente*. Klicke oben auf *Dokument erstellen* (material:add[]) und wähle die Option *Externes Dokument* (material:file_download[]). 
 
 [.subhead]
 Arbeitsschritte
