--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -723,6 +723,7 @@
 .plentymarkets Changelog
 * xref:ROOT:changelog.adoc[Aktueller Changelog]
 * xref:changelog:september-2022.adoc[Changelogs September 2022]
+** xref:changelog:2022-09-28.adoc[Changelog 28. September 2022]
 ** xref:changelog:2022-09-21.adoc[Changelog 21. September 2022]
 ** xref:changelog:2022-09-14.adoc[Changelog 14. September 2022]
 ** xref:changelog:2022-09-07.adoc[Changelog 07. September 2022]
