Added assistent step for event procedure status

--- a/docs/de-de/modules/maerkte/pages/bol-com.adoc
+++ b/docs/de-de/modules/maerkte/pages/bol-com.adoc
@@ -85,6 +85,23 @@ a| Die API-Zugangsdaten erzeugst du im Händlerbereich bei bol.com.
 * *Client-ID* (Pflichtangabe) = Gib die Benutzer-ID für die API-Schnittstelle ein, die du von bol.com erhalten hast.
 * *Client Secret* (Pflichtangabe) = Gib das Passwort für die API-Schnittstelle ein, das du von bol.com erhalten hast.
 
+2+^|Schritt *Prüfung der Zugangsdaten*
+
+| *Sind die Zugangsdaten korrekt?*
+a| Es wird geprüft, ob deine API-Zugangsdaten für bol.com korrekt sind. Im Feld *Status der Zugangsdaten* wird angezeigt, ob die Zugangsdaten korrekt sind. Wenn die Zugangsdaten ungültig sind, gib die Zugangsdaten erneut im Schritt *Zugangsdaten* ein.
+
+2+^|Schritt *Status nach Ereignisaktionen*
+
+| _Auftragsstatus nach Ausführung einer Ereignisaktion wählen_
+a| Auftragsstatus festlegen, in den Aufträge wechseln sollen, nachdem eine Ereignisaktion ausgeführt wurde. Wähle jeweils zwei Auftragsstatus: einen Status, in den Aufträge nach einer erfolgreichen Ereignisaktion wechseln sollen und einen Status, in den Aufträge wechseln sollen, wenn die Ereignisaktion fehlgeschlagen ist. Wenn Aufträge ihren Status nach einer Ereignisaktion nicht wechseln sollen, dann wähle *Kein Statuswechsel*. +
+
+Wähle Status für die folgenden Ereignisaktionen: +
+
+* *Stornierung an bol.com senden*
+* *Versandbestätigung an bol.com senden*
+* *Retourenstatus an bol.com senden*
+* *Retoure bei bol.com anlegen*
+
 2+^|Schritt *Lager*
 
 | *Wie sollen die Bestände berechnet werden, welche an bol.com übertragen werden?*
