--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -546,6 +546,7 @@
 *** xref:business-decisions:domains.adoc[Domains]
 *** xref:business-decisions:plentymarkets-status.adoc[plentymarkets status]
 *** xref:business-decisions:version-cycle.adoc[Version (Beta, Early, Stable)]
+*** xref:business-decisions:dns-self-help.adoc[DNS self-help]
 *** xref:business-decisions:ssl-certificate.adoc[SSL certificates]
 *** xref:business-decisions:hosting-data.adoc[Usage data]
 *** xref:business-decisions:system-relocation.adoc[System relocation]
