--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -26,6 +26,13 @@ Um die Schnittstelle zu Kaufland.de nutzen zu können, musst du dein Kaufland.de
 
 Richte den Marktplatz in plentymarkets ein.
 
+[TIP]
+.Kaufland-Länderplattformen
+====
+Mit plentymarkets kannst du auf den Kaufland-Länderplattformen Kaufland.de, Kaufland.cz und Kaufland.sk verkaufen. +
+Beachte jedoch, dass Kaufland die Marktplätze in Tschechien und der Slowakei noch nicht eröffnet hat. Du kannst deine Artikel dort bereits listen, jedoch noch nicht verkaufen.
+====
+
 [#200]
 === Zugang zu Kaufland.de einrichten
 
@@ -146,7 +153,7 @@ a| *Ja* oder *Nein* wählen. +
 | *Mindestpreis*
 | Einen Verkaufspreis für den Mindestpreis wählen, um die Tiefpreisautomatik von Kaufland.de zu nutzen. +
 Wenn noch andere Händler:innen das gleiche Produkt anbieten, passt die Tiefpreisautomatik deine Preise automatisch an. Dein Preis inklusive Versandkosten ist dann immer einen Cent günstiger als das Angebot deiner Mitbewerber:innen. Der Mindestpreis ist also der niedrigste Preis, zu dem die Variante angeboten werden soll. +
-*_Hinweis:_* Wähle für den Mindestpreis einen anderen Verkaufspreis als für den normalen Verkaufspreis, den du <<#400, für Kaufland.de festgelegt hast>>. Der Mindestpreis-Verkaufspreis muss für die Herkunft Kaufland.de freigegeben sein. +
+*_Hinweis:_* Wähle für den Mindestpreis einen anderen Verkaufspreis als für den normalen Verkaufspreis, den du <<#400, für Kaufland festgelegt hast>>. Der Mindestpreis-Verkaufspreis muss für die Kaufland-Herkunft freigegeben sein. +
 Gib für den als Mindestpreis gewählten Verkaufspreis an der Variante ein Mindestpreis ein, um die Tiefpreisautomatik für diese Variante zu aktivieren. +
 *_Wichtig:_* Der Mindestpreis greift nicht bei Variantenartikeln mit Aufpreisen für Attribute. In diesem Fall die Option *deaktiviert* wählen oder jede Variante als separaten Artikel mit definiertem Mindestpreis erstellen, wenn der Mindestpreis genutzt werden soll.
 
@@ -259,12 +266,6 @@ Lager verknüpfst du über die Einstellung *Lager verknüpfen* im Menü *Einrich
 include::partial$auftragsherkunft-aktivieren.adoc[]
 
 [IMPORTANT]
-.Untergeordnete Kaufland-Herkünfte nicht aktivieren
-====
-Die Herkünfte *102.01 Kaufland DE*, *102.02 Kaufland CZ* und *102.03 Kaufland SK* haben momentan noch keine Verwendung und müssen deshalb deaktiviert werden. Wenn diese Herkünfte aktiviert sind, kann es zu Fehlern beim Bestands- und Preisabgleich kommen.
-====
-
-[IMPORTANT]
 .Kaufland.de-Aufträge nicht gruppieren
 ====
 Beim Auftragsimport von Kaufland.de findet der Abgleich über die externe Auftragsnummer statt. Bei einem gruppierten Auftrag existiert aber keine externe Auftragsnummer mehr. Deshalb besteht die Gefahr, dass Aufträge beim nächsten Abruf erneut erstellt werden.
@@ -290,7 +291,7 @@ include::partial$verkaufspreis-festlegen.adoc[]
 
 Varianten müssen über einen für {market} aktivierten Barcode verfügen.
 
-Gehe wie unten beschrieben vor, um einen Barcode für die Auftragsherkunft Kaufland.de festzulegen, der schon im System vorhandenen ist. Dieser Barcode wird für deine Varianten an Kaufland.de übertragen.
+Gehe wie unten beschrieben vor, um einen Barcode für die Auftragsherkunft Kaufland festzulegen, der schon im System vorhanden ist. Dieser Barcode wird für deine Varianten an Kaufland übertragen.
 
 [.instruction]
 Barcode für Kaufland.de festlegen:
@@ -510,9 +511,7 @@ Katalog mit dem Assistenten erstellen:
 | Wähle eine Kaufland-Länderplattform, auf der du deine Artikel anbieten möchtest. Wähle anschließend eine Kaufland-Produktkategorie. Für jede Kaufland-Produktkategorie, in der du deine Artikel anbieten möchtest, muss ein eigener Katalog erstellt werden.
 | Hier wählst du die Kaufland-Länderplattform und die Kaufland-Produktkategorie, für die ein Katalog erstellt werden soll. Du legst also in diesem Katalog fest, welche Artikel du in diesem Land in der gewählten Produktkategorie verkaufen möchtest. Du kannst unterschiedliche Artikeldaten an verschiedene Länderplattformen exportieren. +
 Die verfügbaren Länderplattformen werden in Länder-Codes angegeben, zum Beispiel *DE* für *Deutschland*. Bei Kaufland heißen die Länderplattformen Storefronts. +
-*_Hinweis:_* Momentan ist für Kaufland nur die Länderplattform *Deutschland (DE)* verfügbar. +
-Für jede Produktkategorie, in der du deine Artikel auf Kaufland anbieten möchtest, muss ein eigener Katalog erstellt werden. +
-Du erstellst also zum Beispiel verschiedene Kataloge für die Kategorien *Fernseher* und *Kameras*.
+Für jede Produktkategorie der einzelnen Länderplattformen, in der du deine Artikel anbieten möchtest, muss ein eigener Katalog erstellt werden. Du erstellst also zum Beispiel verschiedene Kataloge für die Kategorien *Fernseher* und *Kameras*. Du kannst die Produktkategorie wählen, nachdem du eine Länderplattform gewählt hast.
 
 | Wie soll der Katalog für diese Kaufland-Produktkategorie heißen? Der Name wird im Menü *Daten » Kataloge* angezeigt und nicht zu Kaufland exportiert.
 | Hier gibst du einen internen Namen für den Kaufland-Katalog ein. Dieser Name ist nur in deinem plentymarkets System im Menü *Daten » Kataloge* sichtbar und dient einer besseren Übersicht über deine Kataloge. Der Name des Katalogs wird nicht zu Kaufland exportiert. +
@@ -710,7 +709,7 @@ _oder_
 
 | *Filter 2*
 | *Auftrag &gt; Herkunft*
-| *Kaufland.de*
+| Auftragsherkünfte für Kaufland-Länderplattformen wählen, für die du diese Ereignisaktion nutzen willst. Wenn du die Ereignisaktion für alle Kaufland-Länderplattformen nutzen willst, wähle die Herkunft *102 Kaufland*.
 
 | *Aktion*
 | *Plugin*
@@ -754,7 +753,7 @@ Die in <<#ereignisaktion-rechnungen-Kaufland>> aufgeführten Status und Filter d
 
 | *Filter 2*
 | *Auftrag &gt; Herkunft*
-| *Kaufland.de*
+| Auftragsherkünfte für Kaufland-Länderplattformen wählen, für die du diese Ereignisaktion nutzen willst. Wenn du die Ereignisaktion für alle Kaufland-Länderplattformen nutzen willst, wähle die Herkunft *102 Kaufland*.
 
 | *Aktion*
 | *Dokumente > Rechnung generieren*
@@ -792,7 +791,7 @@ Die in <<#ea-rechnungen-upload-Kaufland>> aufgeführten Status und Filter dienen
 
 | *Filter*
 | *Auftrag &gt; Herkunft*
-| *Kaufland.de*
+| Auftragsherkünfte für Kaufland-Länderplattformen wählen, für die du diese Ereignisaktion nutzen willst. Wenn du die Ereignisaktion für alle Kaufland-Länderplattformen nutzen willst, wähle die Herkunft *102 Kaufland*.
 
 | *Aktion*
 | *Auftrag > Rechnung bei Kaufland.de hochladen*
@@ -838,7 +837,7 @@ include::_includes:partial$event-procedure.adoc[]
 
 | *Filter 2*
 | *Auftrag &gt; Herkunft*
-| *Kaufland.de*
+| Auftragsherkünfte für Kaufland-Länderplattformen wählen, für die du diese Ereignisaktion nutzen willst. Wenn du die Ereignisaktion für alle Kaufland-Länderplattformen nutzen willst, wähle die Herkunft *102 Kaufland*.
 
 | *Aktion*
 | *Auftrag > Stornierung an Kaufland.de senden*
@@ -878,7 +877,7 @@ _oder_
 
 | *Filter 2*
 | *Auftrag &gt; Herkunft*
-| *Kaufland.de*
+| Auftragsherkünfte für Kaufland-Länderplattformen wählen, für die du diese Ereignisaktion nutzen willst. Wenn du die Ereignisaktion für alle Kaufland-Länderplattformen nutzen willst, wähle die Herkunft *102 Kaufland*.
 
 | *Aktion*
 | *Auftrag*
@@ -888,9 +887,9 @@ _oder_
 ////
 
 [#retouren]
-=== Retouren bei Kaufland.de
+=== Retouren bei Kaufland
 
-Im Gegensatz zu anderen Marktplätzen können Retouren für Kaufland.de noch nicht mit einer Ereignisaktion über plentymarkets gesendet werden. Retouren für Kaufland.de bearbeitest du direkt in deinem Kaufland-Händlerkonto.
+Im Gegensatz zu anderen Marktplätzen können Retouren für Kaufland noch nicht mit einer Ereignisaktion über plentymarkets gesendet werden. Retouren für Kaufland bearbeitest du direkt in deinem Kaufland-Händlerkonto.
 
 [#1000]
 == Log abrufen
@@ -921,11 +920,11 @@ a| Wähle einen Referenzwert, um nach bestimmten Ereignissen zu suchen.
 |
 
 | *externalOrderId*
-|Filtert nach der Auftragsnummer des Auftrags bei Kaufland.de.
+|Filtert nach der Auftragsnummer des Auftrags bei Kaufland.
 |
 
 | *externalOrderItemId*
-|Filtert nach der ID der Auftragsposition bei Kaufland.de.
+|Filtert nach der ID der Auftragsposition bei Kaufland.
 |
 
 |===
