update icons payment en

--- a/docs/en-gb/modules/payment/pages/beta-managing-payments-new.adoc
+++ b/docs/en-gb/modules/payment/pages/beta-managing-payments-new.adoc
@@ -17,7 +17,7 @@ Changing the basic settings:
 
 . Go to *Setup » Orders » Payment » Incoming*.
 . Carry out the settings. Note <<#table-basic-settings-incoming-payment>>.
-. *Save* (icon:save[role="green"]) the settings.
+. *Save* (material:save[]) the settings.
 
 [[table-basic-settings-incoming-payment]]
 .Carrying out basic settings for incoming payments
@@ -204,7 +204,7 @@ Saving the current filter:
 . Click on material:bookmark_border[] *Save current filter*.
 . Enter a name for the filter.
 . Decide whether
-** this filter should be <<#default-filter, set as default filter>> (icon:toggle_on[set=material, role=skyBlue])
+** this filter should be <<#default-filter, set as default filter>> (material:toggle_on[role=skyBlue])
 ** this filter should be created for all users (material:toggle_on[role=skyBlue]).
 . Click on *SAVE*. +
 → The filter now appears under *Saved filters* (material:bookmarks[]).
