--- a/docs/en-gb/modules/payment/pages/managing-payment-methods.adoc
+++ b/docs/en-gb/modules/payment/pages/managing-payment-methods.adoc
@@ -18,7 +18,7 @@ Specifying the default payment method:
 
 . Navigate to *Setup » Client » [Select client] » Orders*.
 . Select a payment method from the *Default payment method* drop-down list.
-. *Save* (icon:save[role="green"]) the settings.
+. *Save* (material:save[]) the settings.
 
 [#30]
 == Permitting the payment method in a customer class
