ADD uploaded docs

--- a/docs/de-de/modules/automatisierung/pages/ereignisaktionen.adoc
+++ b/docs/de-de/modules/automatisierung/pages/ereignisaktionen.adoc
@@ -145,6 +145,7 @@ xref:auftraege:gelangensbestaetigung-erzeugen.adoc#[Gelangensbestätigung] +
 xref:auftraege:auftraege-verwalten.adoc#840[Sammelrechnung] +
 xref:auftraege:auftraege-verwalten.adoc#860[Sammelgutschrift] +
 xref:auftraege:abhol-lieferschein.adoc#200[Abhol-/Lieferschein] +
+*Hochgeladen* +
 
 *_Wichtig:_* Dieses Ereignis kann auch durch eine andere Ereignisaktion ausgelöst werden, wenn du die Aktion *Rechnung erzeugen* parallel in einer weiteren Ereignisaktion verwendest.
 
@@ -152,6 +153,8 @@ xref:auftraege:abhol-lieferschein.adoc#200[Abhol-/Lieferschein] +
 *Externe Gutschrift hochgeladen*
 |Die Ereignisaktion wird ausgelöst, wenn eine externe Rechnung oder eine externe Gutschrift für einen Auftrag hochgeladen wird.
 
+| *Dokument hochgeladen*
+|Die Ereignisaktion wird ausgelöst, wenn ein Dokument des Typs *Hochgeladen* am Auftrag generiert wird.
 |====
 
 [#events-payment]
