ADD first work to the multipack page for the new item ui

--- a/docs/de-de/modules/artikel/pages/artikel-manuell-anlegen.adoc
+++ b/docs/de-de/modules/artikel/pages/artikel-manuell-anlegen.adoc
@@ -5,11 +5,11 @@
 :author: team-item
 
 ////
-zuletzt bearbeitet 16.05.22
+zuletzt bearbeitet 04.10.22
 ////
 
-//ToDo - gifs erstellen
-//ToDo - sobald der Artikeltyp bei der Anlage auswählbar ist, die Inhalte überarbeiten und sichtbar schalten
+//ToDo - gifs erstellen - nachdem Sets auch zur Auswahl stehen
+//ToDo - sobald Artikel-Sets bei der Anlage auswählbar sind, müssen die Inhalte nochmal überarbeitet werden - sowohl hier in der Konfig als auch in der Multipack, Artikelpakete, Set Seite
 //ToDo - langfristig: video erstellen
 
 Bist du bereit, deine Artikeldaten in plentymarkets einzupflegen?
@@ -18,13 +18,14 @@ Auf dieser Seite lernst du, Artikel und Varianten manuell zu erstellen.
 //#video#
 
 [discrete]
-==== Ablauf
+=== [.underline]##Ablauf##
 
-* Erstelle den xref:artikel:artikel-manuell-anlegen.adoc#200[Artikeldatensatz].
-* Soll der Artikel z.B. in unterschiedlichen Größen oder Farben erhältlich sein? Dann erstelle xref:artikel:artikel-manuell-anlegen.adoc#300[alle nötigen Varianten].
-* Füge xref:artikel:artikel-manuell-anlegen.adoc#400[weitere Produktdaten] wie Bilder, Texte und Bestandsinformationen hinzu.
-* Schau dir regelmäßig eine xref:artikel:artikel-manuell-anlegen.adoc#500[Vorschau des Artikels im plentyShop] an und finde heraus, wo du noch weitere Produktdaten hinzufügen oder Einstellungen optimieren musst.
-* xref:artikel:artikel-manuell-anlegen.adoc#600[Aktiviere den Artikel], wenn er verkaufsfertig ist.
+[%interactive]
+* [ ] Erstelle den xref:artikel:artikel-manuell-anlegen.adoc#200[Artikeldatensatz].
+* [ ] Soll der Artikel z.B. in unterschiedlichen Größen oder Farben erhältlich sein? Dann erstelle xref:artikel:artikel-manuell-anlegen.adoc#300[alle nötigen Varianten].
+* [ ] Füge xref:artikel:artikel-manuell-anlegen.adoc#400[weitere Produktdaten] wie Bilder, Texte und Bestandsinformationen hinzu.
+* [ ] Schau dir regelmäßig eine xref:artikel:artikel-manuell-anlegen.adoc#500[Vorschau des Artikels im plentyShop] an und finde heraus, wo du noch weitere Produktdaten hinzufügen oder Einstellungen optimieren musst.
+* [ ] xref:artikel:artikel-manuell-anlegen.adoc#600[Aktiviere den Artikel], wenn er verkaufsfertig ist.
 
 [TIP]
 .Willst du Artikel lieber importieren?
@@ -40,10 +41,8 @@ Wähle das Tool, das für deine Situation am besten geeignet ist.
 [#100]
 == Voraussetzungen
 
-Diese Seite setzt voraus, dass du bereits Grundkenntnisse über die Artikelstruktur in plentymarkets hast:
-
-* Kennst du den xref:artikel:struktur.adoc#[Unterschied zwischen Artikeln und Varianten]?
-* Weißt du, wie Varianten ihre xref:artikel:vererbung.adoc#[Daten vererben] können?
+Diese Seite setzt voraus, dass du bereits Grundkenntnisse über die Artikelstruktur in plentymarkets hast.
+Du sollst den xref:artikel:struktur.adoc#[Unterschied zwischen Artikeln und Varianten] kennen und du sollst wissen, wie Varianten ihre xref:artikel:vererbung.adoc#[Daten vererben].
 
 Zudem müssen folgende Daten im System vorhanden sein, um wie hier beschrieben Artikel und Varianten manuell zu erstellen:
 
@@ -56,7 +55,6 @@ Zudem müssen folgende Daten im System vorhanden sein, um wie hier beschrieben A
 == Einen neuen Artikel erstellen
 
 Erstelle den Artikeldatensatz, indem du einige grundlegende Produktinformationen eingibst.
-Keine Sorge, der Artikel wird nicht sofort zum Verkauf stehen.
 Nach der Erstellung fügst du weitere Produktinformationen hinzu und aktivierst den Artikel, wenn er verkaufsfertig ist.
 
 //#gif#
@@ -65,12 +63,20 @@ Nach der Erstellung fügst du weitere Produktinformationen hinzu und aktivierst 
 Einen neuen Artikel erstellen:
 
 . Öffne das Menü *Artikel » Artikel-UI*.
-. Klicke auf *Neuen Artikel anlegen* (icon:plus[role="darkGrey"]). +
-→ Ein Pop-Up Fenster wird geöffnet. Dieses Fenster ist in mehrere Schritte unterteilt.
-. Nimm die Einstellungen in jedem Schritt vor.
+. Klicke auf icon:plus[role="darkGrey"] und wähle die Art des Artikels, den du erstellen möchtest.
+Beachte, dass diese Einstellung nicht mehr geändert werden kann, nachdem du den Artikel erstellt hast.
+* *Standard-Artikel*: Ein normaler Artikel.
+In den meisten Fällen wirst du wahrscheinlich einen Standard-Artikel erstellen.
+Diese Seite beschreibt den Vorgang.
+* <<Multipack-Artikel>>:
+Beispiel: 1 Flasche Wasser, eine Packung mit 6 Flaschen und eine Packung mit 12 Flaschen.
+//* <<Set-Artikel>>:
+//Beispiel: Eine Fußballuniform bestehend aus einem Trikot, Shorts und Socken. Endkunden stellen ihre eigenen Uniformen zusammen, indem sie die gewünschte Größe und Farbe für jede der drei Komponenten auswählen.
+. Ein Pop-Up Fenster wird geöffnet. Dieses Fenster ist in mehrere Schritte unterteilt. Nimm die Einstellungen in jedem Schritt vor.
 
+'''
 [discrete]
-==== Schritt: Artikeldaten
+==== Schritt: Name
 
 :manual:
 
@@ -78,18 +84,7 @@ Einen neuen Artikel erstellen:
 |===
 |Einstellung |Erläuterung
 
-//|[#intable-typ]*Typ*
-//a|Welche Art von Artikel willst du erstellen? In den meisten Fällen wirst du wahrscheinlich einen "normalen Artikel" erstellen, d.h. einen Artikel vom Typ *Standard*.
-
-//Die anderen Optionen in der Dropdown-Liste sind für andere Anwendungsfälle vorgesehen:
-
-//* *Standard* = Erstellt einen normalen Artikel oder ein xref:artikel:multipacks-pakete-sets.adoc#2000[Artikelpaket].
-//* *Set* = Erstellt ein xref:artikel:multipacks-pakete-sets.adoc#3000[Artikelset].
-//* *Multipack* = Erstellt einen xref:artikel:multipacks-pakete-sets.adoc#1000[Multipack-Artikel].
-
-//*_Hinweis_*: Diese Einstellung kann nach der Artikelanlage nicht mehr geändert werden.
-
-| *Name* +
+| *Artikelname* +
 [red]#(Pflichtfeld)#
 |Gib einen Namen für den Artikel ein.
 
@@ -98,6 +93,7 @@ Nachdem du den Artikel erstellt hast, kannst du den Namen in weitere Sprachen ü
 
 |===
 
+'''
 [discrete]
 ==== Schritt: Kategorien
 
@@ -120,6 +116,7 @@ Klicke auf material:delete[role="darkGrey"], um eine Kategorie aus dieser Liste 
 
 |===
 
+'''
 [discrete]
 ==== Schritt: Hauptvariante (Optional)
 
@@ -160,6 +157,7 @@ Warum? Verknüpfst du Attribute bereits jetzt mit der Hauptvariante, müssen all
 Im Nachhinein bist du also flexibler.
 |===
 
+'''
 [discrete]
 ==== Schritt: Fertig
 
@@ -202,10 +200,10 @@ Erstelle zunächst alle nötigen Varianten.
 Benötigte Varianten erstellen:
 
 . Öffne das Menü *Artikel » Artikel-UI » [Artikel öffnen] » Variantenübersicht*.
-. Klicke auf *Varianten erstellen* (icon:plus[role="darkGrey"]). +
-→ Ein Pop-Up Fenster wird geöffnet. Dieses Fenster ist in mehrere Schritte unterteilt.
-. Nimm die Einstellungen in jedem Schritt vor.
+. Klicke auf *Varianten erstellen* (icon:plus[role="darkGrey"]).
+. Ein Pop-Up Fenster wird geöffnet. Dieses Fenster ist in mehrere Schritte unterteilt. Nimm die Einstellungen in jedem Schritt vor.
 
+'''
 [discrete]
 ==== Schritt: Einstellungen
 
@@ -245,6 +243,7 @@ Klicke auf icon:pencil[role="darkGrey"] *Attribute auswählen*, wenn du deine Au
 
 |===
 
+'''
 [discrete]
 ==== Schritt: Vorschau
 
@@ -261,6 +260,7 @@ Klicke auf icon:pencil[role="darkGrey"] *Attribute auswählen*, wenn du deine Au
 Es gibt keine Begrenzung, wie viele Kombinationen möglich sind.
 |===
 
+'''
 [discrete]
 ==== Schritt: Zusammenfassung
 
